--- a/Back/src/ProEventos.API/appsettings.Development.json
+++ b/Back/src/ProEventos.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default" : "Server=DESKTOP-7F0UEO8;Database=Eventos;User Id=sa;Password=1Lmau1kk4m;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
